--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Data/Spotify/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 Data/Spotify/.cache
 .DS_Store
 Data/Spotify/.ipynb_checkpoints/spotify-api-checkpoint.ipynb
+Data/ATUS/.ipynb_checkpoints/atus-checkpoint.ipynb
