--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Data/Spotify/.cache
 Data/Spotify/.ipynb_checkpoints/spotify-api-checkpoint.ipynb
 Data/ATUS/.ipynb_checkpoints/atus-checkpoint.ipynb
 Data/.ipynb_checkpoints/google-trends-checkpoint.ipynb
+Data/StopQuestionFrisk/.ipynb_checkpoints/stop-and-frisk-checkpoint.ipynb
+__pycache__/drive_utils.cpython-39.pyc
