--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Data/ATUS/.ipynb_checkpoints/atus-checkpoint.ipynb
 Data/.ipynb_checkpoints/google-trends-checkpoint.ipynb
 Data/StopQuestionFrisk/.ipynb_checkpoints/stop-and-frisk-checkpoint.ipynb
 __pycache__/drive_utils.cpython-39.pyc
+Data/Peloton/.ipynb_checkpoints/peloton-api-checkpoint.ipynb
