--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Data/.ipynb_checkpoints/google-trends-checkpoint.ipynb
 Data/StopQuestionFrisk/.ipynb_checkpoints/stop-and-frisk-checkpoint.ipynb
 __pycache__/drive_utils.cpython-39.pyc
 Data/Peloton/.ipynb_checkpoints/peloton-api-checkpoint.ipynb
+Colab-Notebooks/.ipynb_checkpoints/p-values-checkpoint.ipynb
