--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Data/StopQuestionFrisk/.ipynb_checkpoints/stop-and-frisk-checkpoint.ipynb
 __pycache__/drive_utils.cpython-39.pyc
 Data/Peloton/.ipynb_checkpoints/peloton-api-checkpoint.ipynb
 Colab-Notebooks/.ipynb_checkpoints/p-values-checkpoint.ipynb
+Data/.ipynb_checkpoints/nos-checkpoint.ipynb
