--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ __pycache__/drive_utils.cpython-39.pyc
 Data/Peloton/.ipynb_checkpoints/peloton-api-checkpoint.ipynb
 Colab-Notebooks/.ipynb_checkpoints/p-values-checkpoint.ipynb
 Data/.ipynb_checkpoints/nos-checkpoint.ipynb
+Data/NOS/.ipynb_checkpoints/nos-checkpoint.ipynb
