--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ Data/Peloton/.ipynb_checkpoints/peloton-api-checkpoint.ipynb
 Colab-Notebooks/.ipynb_checkpoints/p-values-checkpoint.ipynb
 Data/.ipynb_checkpoints/nos-checkpoint.ipynb
 Data/NOS/.ipynb_checkpoints/nos-checkpoint.ipynb
+Data/ATUS/.ipynb_checkpoints/atus-bowling-alone-checkpoint.ipynb
+Data/ATUS/.ipynb_checkpoints/atus-combined-checkpoint.ipynb
+Data/NOS/.ipynb_checkpoints/nos-Copy1-checkpoint.ipynb
