--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ Data/NOS/.ipynb_checkpoints/nos-checkpoint.ipynb
 Data/ATUS/.ipynb_checkpoints/atus-bowling-alone-checkpoint.ipynb
 Data/ATUS/.ipynb_checkpoints/atus-combined-checkpoint.ipynb
 Data/NOS/.ipynb_checkpoints/nos-Copy1-checkpoint.ipynb
+Notes/75MinutesOfPython.aux
+Notes/75MinutesOfPython.bcf
+Notes/75MinutesOfPython.log
+Notes/75MinutesOfPython.out
+Notes/75MinutesOfPython.run.xml
+Notes/75MinutesOfPython.synctex.gz
