--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ Notes/75MinutesOfPython.log
 Notes/75MinutesOfPython.out
 Notes/75MinutesOfPython.run.xml
 Notes/75MinutesOfPython.synctex.gz
+Notes/tex/readings.aux
+Notes/tex/readings.aux
+Notes/tex/readings.bbl
+Notes/tex/readings.aux
+Notes/tex/readings.bcf
+Notes/tex/readings.log
+Notes/tex/readings.blg
+Notes/tex/readings.out
+Notes/tex/readings.run.xml
+Notes/tex/readings.synctex.gz
+*.aux
