--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,18 @@ Notes/tex/readings.out
 Notes/tex/readings.run.xml
 Notes/tex/readings.synctex.gz
 *.aux
+Notes/tex/readings.aux
+Notes/tex/readings.bcf
+Notes/tex/readings.bbl
+Notes/tex/readings.log
+Notes/tex/readings.out
+Notes/tex/readings.aux
+Notes/tex/readings.bbl
+Notes/tex/readings.bcf
+Notes/tex/readings.run.xml
+Notes/readings.bbl
+Notes/readings.bcf
+Notes/readings.blg
+Notes/readings.log
+Notes/readings.out
+Notes/readings.run.xml
