--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ Notes/readings.log
 Notes/readings.out
 Notes/readings.run.xml
 Notes/readings.synctex.gz
+Notes/.ipynb_checkpoints/Z-table-checkpoint.ipynb
+Notes/ztable.log
+Notes/python/.ipynb_checkpoints/Z-table-checkpoint.ipynb
