--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,12 @@ Notes/readings.synctex.gz
 Notes/.ipynb_checkpoints/Z-table-checkpoint.ipynb
 Notes/ztable.log
 Notes/python/.ipynb_checkpoints/Z-table-checkpoint.ipynb
+Notes/google-sheets-help.bbl
+Notes/google-sheets-help.bcf
+Notes/google-sheets-help.blg
+Notes/google-sheets-help.log
+Notes/google-sheets-help.out
+Notes/google-sheets-help.run.xml
+Notes/google-sheets-help.tex.bbl
+Notes/google-sheets-help.tex.blg
+Notes/google-sheets-help.toc
