change figure to tikz
makes tex more self-contained

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ Notes/google-sheets-help.run.xml
 Notes/google-sheets-help.tex.bbl
 Notes/google-sheets-help.tex.blg
 Notes/google-sheets-help.toc
+Notes/ztable.synctex.gz
