--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ Notes/google-sheets-help.tex.bbl
 Notes/google-sheets-help.tex.blg
 Notes/google-sheets-help.toc
 Notes/ztable.synctex.gz
+Notes/google-sheets-help.synctex.gz
