--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ Notes/google-sheets-help.tex.blg
 Notes/google-sheets-help.toc
 Notes/ztable.synctex.gz
 Notes/google-sheets-help.synctex.gz
+Notes/ztable-interior.synctex.gz
+Notes/ztable-interior.log
+Notes/python/.ipynb_checkpoints/Z-table interior-checkpoint.ipynb
