ztable and correlation plot

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ Notes/google-sheets-help.synctex.gz
 Notes/ztable-interior.synctex.gz
 Notes/ztable-interior.log
 Notes/python/.ipynb_checkpoints/Z-table interior-checkpoint.ipynb
+Data/ATUS/.ipynb_checkpoints/ATUS-correlation-checkpoint.ipynb
+Data/ATUS/.ipynb_checkpoints/atus-Copy1-checkpoint.ipynb
