add Strogatz reading

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,4 @@ Notes/ztable-interior.log
 Notes/python/.ipynb_checkpoints/Z-table interior-checkpoint.ipynb
 Data/ATUS/.ipynb_checkpoints/ATUS-correlation-checkpoint.ipynb
 Data/ATUS/.ipynb_checkpoints/atus-Copy1-checkpoint.ipynb
+texput.log
